<resources>
    <string name="app_name">SOS</string>
    <string name="parse_server_url">https://parse.buddy.com/parse/</string>
    <string name="parse_client_key">i1S99ayjdgXX6dZ45GVXPaWEOFn7yMfs</string>
    <string name="parse_app_id">1da9d53b-b914-435a-9933-25ff94eab50b</string>
    <string name="title_activity_login">Sign in</string>
    <string name="parse_sender_id">146142827267</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_mobie_no">Mobile No.</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="Signup">Sign Up</string>

    <string name="entermobileno">Mobile No</string>
    <string name="enterpassword">Password</string>
    <string name="enteremail">Email</string>
    <string name="entername">Name</string>
    <string name="prompt_name">Name</string>
    <string name="title_activity_alert">AlertActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_emergency">EmergencyActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="done">Done</string>
    <string name="emergency_no">NO</string>
    <string name="emergency_yes">YES</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
